--- a/_modules/qiskit_quantuminspire/qi_jobs.html
+++ b/_modules/qiskit_quantuminspire/qi_jobs.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../genindex.html" /><link rel="search" title="Search" href="../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>qiskit_quantuminspire.qi_jobs - Qiskit-QuantumInspire 0.10.0 documentation</title>
+        <title>qiskit_quantuminspire.qi_jobs - Qiskit-QuantumInspire 0.13.0 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../../_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
@@ -159,7 +159,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.10.0 documentation</div></a>
+      <a href="../../index.html"><div class="brand">Qiskit-QuantumInspire 0.13.0 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -183,7 +183,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.10.0 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.13.0 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="../../search.html" role="search">
@@ -302,7 +302,6 @@
 <span class="kn">from</span> <span class="nn">qiskit.providers</span> <span class="kn">import</span> <span class="n">JobV1</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers.backend</span> <span class="kn">import</span> <span class="n">BackendV2</span>
 <span class="kn">from</span> <span class="nn">qiskit.providers.jobstatus</span> <span class="kn">import</span> <span class="n">JobStatus</span>
-<span class="kn">from</span> <span class="nn">qiskit.qobj</span> <span class="kn">import</span> <span class="n">QobjExperimentHeader</span>
 <span class="kn">from</span> <span class="nn">qiskit.result.models</span> <span class="kn">import</span> <span class="n">ExperimentResult</span><span class="p">,</span> <span class="n">ExperimentResultData</span>
 <span class="kn">from</span> <span class="nn">qiskit.result.result</span> <span class="kn">import</span> <span class="n">Result</span>
 
@@ -375,7 +374,7 @@
             <span class="n">num_qubits</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">num_qubits</span>
             <span class="n">num_clbits</span> <span class="o">=</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">circuit</span><span class="o">.</span><span class="n">num_clbits</span>
             <span class="n">num_bits</span> <span class="o">=</span> <span class="n">num_qubits</span> <span class="k">if</span> <span class="p">(</span><span class="n">num_clbits</span> <span class="o">==</span> <span class="mi">0</span><span class="p">)</span> <span class="k">else</span> <span class="n">num_clbits</span>
-            <span class="n">exp_header</span> <span class="o">=</span> <span class="n">QobjExperimentHeader</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="n">circuit_name</span><span class="p">,</span> <span class="n">memory_slots</span><span class="o">=</span><span class="n">num_bits</span><span class="p">)</span>
+            <span class="n">exp_header</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;name&quot;</span><span class="p">:</span> <span class="n">circuit_name</span><span class="p">,</span> <span class="s2">&quot;memory_slots&quot;</span><span class="p">:</span> <span class="n">num_bits</span><span class="p">}</span>
 
             <span class="k">if</span> <span class="n">qi_result</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="k">assert</span> <span class="n">circuit_data</span><span class="o">.</span><span class="n">system_message</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span>
@@ -418,7 +417,7 @@
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_create_experiment_result</span><span class="p">(</span>
-        <span class="n">exp_header</span><span class="p">:</span> <span class="n">QobjExperimentHeader</span><span class="p">,</span>
+        <span class="n">exp_header</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
         <span class="n">result</span><span class="p">:</span> <span class="n">RawJobResult</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an ExperimentResult instance based on RawJobResult parameters.&quot;&quot;&quot;</span>
@@ -439,7 +438,7 @@
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_create_empty_experiment_result</span><span class="p">(</span>
-        <span class="n">exp_header</span><span class="p">:</span> <span class="n">QobjExperimentHeader</span><span class="p">,</span> <span class="n">trace_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+        <span class="n">exp_header</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span> <span class="n">trace_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span> <span class="n">message</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">ExperimentResult</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create an empty ExperimentResult instance.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">ExperimentResult</span><span class="p">(</span>
@@ -771,7 +770,7 @@
       
     </aside>
   </div>
-</div><script src="../../_static/documentation_options.js?v=82662543"></script>
+</div><script src="../../_static/documentation_options.js?v=1019fba8"></script>
     <script src="../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../_static/scripts/furo.js?v=5fa4622c"></script>
