--- a/genindex.html
+++ b/genindex.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#" /><link rel="search" title="Search" href="search.html" />
 
-    <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 --><title>Index - Qiskit-QuantumInspire 0.10.0 documentation</title>
+    <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 --><title>Index - Qiskit-QuantumInspire 0.13.0 documentation</title>
 <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
@@ -158,7 +158,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">Qiskit-QuantumInspire 0.10.0 documentation</div></a>
+      <a href="index.html"><div class="brand">Qiskit-QuantumInspire 0.13.0 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -182,7 +182,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.10.0 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.13.0 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="search.html" role="search">
@@ -578,12 +578,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_jobs.QIJob.serialize">serialize() (qiskit_quantuminspire.qi_jobs.QIJob method)</a>
 </li>
-        <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend.status">status (qiskit_quantuminspire.hybrid.hybrid_backend.QIHybridBackend property)</a>
-
-        <ul>
-          <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.status">(qiskit_quantuminspire.qi_backend.QIBackend property)</a>
+        <li><a href="api/qiskit_quantuminspire.html#qiskit_quantuminspire.qi_backend.QIBackend.status">status (qiskit_quantuminspire.qi_backend.QIBackend property)</a>
 </li>
-        </ul></li>
         <li><a href="api/qiskit_quantuminspire.hybrid.html#qiskit_quantuminspire.hybrid.hybrid_job.QIHybridJob.status">status() (qiskit_quantuminspire.hybrid.hybrid_job.QIHybridJob method)</a>
 
         <ul>
@@ -650,7 +646,7 @@
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=82662543"></script>
+</div><script src="_static/documentation_options.js?v=1019fba8"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=5fa4622c"></script>
