--- a/_modules/qiskit_quantuminspire/mapping/instruction_mapping.html
+++ b/_modules/qiskit_quantuminspire/mapping/instruction_mapping.html
@@ -5,9 +5,9 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../../genindex.html" /><link rel="search" title="Search" href="../../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>qiskit_quantuminspire.mapping.instruction_mapping - Qiskit-QuantumInspire 0.14.0 documentation</title>
+        <title>qiskit_quantuminspire.mapping.instruction_mapping - Qiskit-QuantumInspire 0.16.0 documentation</title>
       <link rel="stylesheet" type="text/css" href="../../../_static/styles/furo.css?v=354aac6f" />
-    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../../../_static/styles/qiskit-sphinx-theme.css?v=8ff9dcb6" />
     <link rel="stylesheet" type="text/css" href="../../../_static/mystnb.8ecb98da25f57f5357bf6f572d296f466b2cfe2517ffebfabe82451661e28f02.css" />
     <link rel="stylesheet" type="text/css" href="../../../_static/styles/furo-extensions.css?v=302659d7" />
@@ -159,7 +159,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../../index.html"><div class="brand">Qiskit-QuantumInspire 0.14.0 documentation</div></a>
+      <a href="../../../index.html"><div class="brand">Qiskit-QuantumInspire 0.16.0 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -183,7 +183,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../../index.html">
   
   
-  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.14.0 documentation</span>
+  <span class="sidebar-brand-text">Qiskit-QuantumInspire 0.16.0 documentation</span>
   
 </a>
 <form class="sidebar-search-container" method="get" action="../../../search.html" role="search">
@@ -280,8 +280,8 @@
 
 <div class="viewcode-block" id="InstructionMapping">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping">[docs]</a>
-<span class="k">class</span> <span class="nc">InstructionMapping</span><span class="p">:</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">qiskit_to_os</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">_DEFAULT_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">InstructionMapping</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">qiskit_to_os</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">_DEFAULT_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">qiskit_to_os</span>
         <span class="c1"># Uses lower case for keys to normalize inconsistent capitalization of backends</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_OPENSQUIRREL_TO_QISKIT_MAPPING</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="p">{</span>
@@ -290,28 +290,28 @@
 
 <div class="viewcode-block" id="InstructionMapping.qiskit_to_opensquirrel">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping.qiskit_to_opensquirrel">[docs]</a>
-    <span class="k">def</span> <span class="nf">qiskit_to_opensquirrel</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">instruction</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">qiskit_to_opensquirrel</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">instruction</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Translate a Qiskit gate name to the equivalent opensquirrel gate name.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="p">[</span><span class="n">instruction</span><span class="o">.</span><span class="n">lower</span><span class="p">()]</span></div>
 
 
 <div class="viewcode-block" id="InstructionMapping.opensquirrel_to_qiskit">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping.opensquirrel_to_qiskit">[docs]</a>
-    <span class="k">def</span> <span class="nf">opensquirrel_to_qiskit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">instruction</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">opensquirrel_to_qiskit</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">instruction</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Translate an opensquirrel gate name to the equivalent Qiskit gate name.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_OPENSQUIRREL_TO_QISKIT_MAPPING</span><span class="p">[</span><span class="n">instruction</span><span class="o">.</span><span class="n">lower</span><span class="p">()]</span></div>
 
 
 <div class="viewcode-block" id="InstructionMapping.supported_opensquirrel_instructions">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping.supported_opensquirrel_instructions">[docs]</a>
-    <span class="k">def</span> <span class="nf">supported_opensquirrel_instructions</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">supported_opensquirrel_instructions</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Return a list of all supported opensquirrel instructions.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="o">.</span><span class="n">values</span><span class="p">())</span></div>
 
 
 <div class="viewcode-block" id="InstructionMapping.supported_qiskit_instructions">
 <a class="viewcode-back" href="../../../api/qiskit_quantuminspire.mapping.html#qiskit_quantuminspire.mapping.instruction_mapping.InstructionMapping.supported_qiskit_instructions">[docs]</a>
-    <span class="k">def</span> <span class="nf">supported_qiskit_instructions</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">supported_qiskit_instructions</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Return a list of all supported Qiskit instructions.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_QISKIT_TO_OPENSQUIRREL_MAPPING</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span></div>
 </div>
@@ -348,7 +348,7 @@
       
     </aside>
   </div>
-</div><script src="../../../_static/documentation_options.js?v=9e420a66"></script>
+</div><script src="../../../_static/documentation_options.js?v=7de89ed4"></script>
     <script src="../../../_static/doctools.js?v=9bcbadda"></script>
     <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../../../_static/scripts/furo.js?v=5fa4622c"></script>
